# cchip8

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/cchip8/: audio.h  cpu.h  display.h  emulator.h  events.h  input.h  instruction.h  memory.h  menu.h  rom.h  window.h
scripts/: build.sh
src/: CMakeLists.txt
src/cchip8/: CMakeLists.txt  audio.cpp  cpu.cpp  display.cpp  emulator.cpp  input.cpp  main.cpp  memory.cpp  menu.cpp  rom.cpp  window.cpp
src/cli/: CMakeLists.txt  chip8.cpp
